fix annoatation toolbar above document viewer on mobile devices

--- a/src/components/AnnotationToolsOverlay/AnnotationToolsOverlay.scss
+++ b/src/components/AnnotationToolsOverlay/AnnotationToolsOverlay.scss
@@ -10,14 +10,26 @@
   margin-left: calc(-#{$right-panel-width} / 2 - 53px);
   padding: 0;
   border-radius: 5px;
-  background: rgba(20, 20, 20, 0.95);
+  background: transparent;
   border-width: 0;
   color: #f4f4f4;
 
+  .AnnotationsToolbar {
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    background: rgba(20, 20, 20, 0.95);
+  }
+
   @include mobile {
-    top: calc(#{$panel-height} + 20px);
-    left: calc(50% - 61.5px);
+    top: calc(#{$panel-height} + 5px);
+    left: 0;
+    right: 0;
     margin: 0;
+
+    .AnnotationsToolbar {
+      margin: 0 auto;
+    }
   }
 
   .Button {
