--- a/src/components/DocumentContainer/DocumentContainer.scss
+++ b/src/components/DocumentContainer/DocumentContainer.scss
@@ -11,7 +11,7 @@
 
   @include mobile {
     width: 100%;
-    height: calc(100% - #{$top-bar-height-m} - #{$panel-height});
+    height: calc(100% - #{$top-bar-height-m} - #{$panel-height} - #{$annotations-toolbar-height-m});
   }
 
   &.left-panel {
@@ -19,7 +19,7 @@
 
     @include mobile {
       width: 100%;
-      margin-top: $panel-height;
+      margin-top: $panel-height + $annotations-toolbar-height-m;
     }
   }
 
