--- a/src/constants/styles.scss
+++ b/src/constants/styles.scss
@@ -18,6 +18,7 @@ $top-bar-height-m: 42px;
 $button-width-m: 41px;
 $button-height-m: 41px;
 $search-overlay-height-m: 61px;
+$annotations-toolbar-height-m: 48px;
 
 // Colors
 $gray87: #212121;
